examples/bad/python.ypl
# iterative
fact(n):
	if (1 == 2):
		r = r * i;
	return n;

main():
	return 0;
	#out(fact(7));
	#out(factr(7));
